Developer/src/objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translate__c</fullName>
        <label>Translate</label>
        <referenceTo>Translate__c</referenceTo>
        <relationshipLabel>Topic</relationshipLabel>
        <relationshipName>Topic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Topic名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>